feat(analysis): refactor analysis services to utilize AnalysisEntityLoadService for portfolio loading; enhance DashboardAnalysisService, AllocationAnalysisService, and TopMoversAnalysisService with improved data handling and performance calculations; update orchestrator configuration to support new dependencies